wip: add resources* refactor: some refactoring* wip:configure swagger
